--- a/style.css
+++ b/style.css
@@ -4,4 +4,13 @@
 	/*background-image: url('https://content.r9cdn.net/rimg/dimg/e9/20/c95cd7db-city-40728-16c2090182d.jpg?width=1200&height=630&crop=true');*/
 	background-repeat: no-repeat;
 	text-align: right;
+	width: fit-content;
+}
+
+.carousel-item{
+	height: 700px;
+}
+.carousel-item img{
+	width: 100%;
+	height: 100%;
 }
