--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@
 	height: 700px;
 }
 .carousel-item img{
-	width: 100%;
-	height: 100%;
+	width: 150%;
+	height: 150%;
 }
 
-main{
-	margin: 0;
-	padding-top: 0;
+main, div{
+	margin: 0px;
+	padding-top: 0px;
+	border-top: 0px;
 }
